# semar-kos-finder

./: .env.development.example  .env.example  .env.production.example  .env.staging.example  .gitignore  .graphify_uncached.txt  .ignore  AGENTS.md  PLAN_PARSE_UX_IMPROVEMENTS.md  PROJECT_STRUCTURE.MD  README.md  STRUCT_CLEAN_DATA.md  compose.yaml  pyrightconfig.json
.github/workflows/: README.md  deploy.yml  production.yml  staging.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-dockerfile-build.txt  task-2-dockerignore.txt  task-3-compose-prod-staging.txt  task-4-env-templates.txt  task-5-readme-docker.txt
.sisyphus/plans/: 4-containers-fastapi-admin-mongo.md  (+1 more)
admin/: .dockerignore  Dockerfile  middleware.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo
backend/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  job_queue.py  main.py  models.py  parse_engine.py  seed.py  seed_master_uns.py
backend/app/routers/: admin_actions.py  admin_kos.py  admin_master_uns.py  auth.py  kos.py  master_uns.py
backend/semar_kos_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_smoke.py
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
src/: check_duplicate.py  concat_data.py  csv_to_json.py  extract_pdf.py  geocoding_location.py  get_addres_plus_code.py  get_new_data.py  json_to_csv.py
(+61 files in other folders)
